# google-meet-composio-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  supervisor_example.py
google_meet_agent/: __init__.py  agent.py  auth.py  cli.py  config.py  exceptions.py  tools.py
scripts/: discover_tools.py  qa_test.py  quick_test.py  setup_connection.py
tests/: __init__.py  conftest.py
